# megaparsec-bug

./: LICENSE  README.md  megaparsec-bug.cabal  run.sh
app/: Main.hs
